# embedded-hal-timer

./: Cargo.toml  README.md  rfc-draft.md
examples/std/: Cargo.toml
examples/stm32/: Cargo.toml
examples/stm32/.cargo/: config.toml
src/: impl_embassy_stm32.rs  impl_embassy_time.rs  lib.rs
