[package]
name = "example-std"
version = "0.1.0"
edition = "2024"

[dependencies]
embedded-hal-timer = { path = "../../" }
embassy-executor = { version = "0.7.0", features = ["arch-std", "executor-thread"] }
embassy-time = { version = "0.4.0", features = ["std"] }
static_cell = "2.1.0"
embassy-sync = { version = "0.6.2", features = ["std"] }
rand = "0.9.0"
embassy-futures = "0.1.1"
