[package]
name = "example-stm32"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-stm32 = { version = "0.2.0",  features = [ "defmt", "unstable-pac", "stm32l476rg", "memory-x", "time-driver-any", "exti", "chrono"]  }
embassy-executor = { version = "0.7.0",  features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-time = { version = "0.4.0",  features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768" ] }

defmt = "1.0.1"
defmt-rtt = "1.0.0"

cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

embedded-hal-async = "1.0.0"
embedded-hal-timer = { path = "../../", default-features = false, features = ["embassy-stm32"] }

[profile.release]
debug = 2
